# WesternExamManagementSystem

./: .gitignore  CMakeLists.txt  Doxyfile  examData.txt  readme.md  resources.qrc
docs/html/: Break_8cpp.html  Break_8cpp__incl.dot  Break_8h.html  Break_8h__dep__incl.dot  Break_8h__incl.dot  Break_8h_source.html  CheckInDialog_8cpp.html  CheckInDialog_8cpp__incl.dot  CheckInDialog_8h.html  CheckInDialog_8h__dep__incl.dot  CheckInDialog_8h__incl.dot  CheckInDialog_8h_source.html  ExamDataLoader_8cpp.html  ExamDataLoader_8cpp__incl.dot  ExamDataLoader_8h.html  ExamDataLoader_8h__dep__incl.dot  ExamDataLoader_8h__incl.dot  ExamDataLoader_8h_source.html  Exam_8cpp.html  Exam_8cpp__incl.dot  Exam_8h.html  Exam_8h__dep__incl.dot  Exam_8h__incl.dot  Exam_8h_source.html  GenerateReport_8cpp.html  GenerateReport_8cpp__incl.dot  GenerateReport_8h.html  GenerateReport_8h__dep__incl.dot  GenerateReport_8h__incl.dot  GenerateReport_8h_source.html  IncidentDialog_8cpp.html  IncidentDialog_8cpp__incl.dot  IncidentDialog_8h.html  IncidentDialog_8h__dep__incl.dot  IncidentDialog_8h__incl.dot  IncidentDialog_8h_source.html  PDFReportGenerator_8cpp.html  PDFReportGenerator_8cpp__incl.dot  PDFReportGenerator_8h.html  PDFReportGenerator_8h__dep__incl.dot  (+109 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+17 more)
docs/latex/: Break_8cpp.tex  Break_8cpp.tex.tmp  Break_8cpp__incl.dot  Break_8h.tex  Break_8h__dep__incl.dot  Break_8h__incl.dot  Break_8h_source.tex  CheckInDialog_8cpp.tex  CheckInDialog_8cpp__incl.dot  CheckInDialog_8h.tex  CheckInDialog_8h__dep__incl.dot  CheckInDialog_8h__incl.dot  CheckInDialog_8h_source.tex  ExamDataLoader_8cpp.tex  ExamDataLoader_8cpp__incl.dot  ExamDataLoader_8h.tex  ExamDataLoader_8h__dep__incl.dot  ExamDataLoader_8h__incl.dot  ExamDataLoader_8h_source.tex  Exam_8cpp.tex  Exam_8cpp__incl.dot  Exam_8h.tex  Exam_8h__dep__incl.dot  Exam_8h__incl.dot  Exam_8h_source.tex  GenerateReport_8cpp.tex  GenerateReport_8cpp__incl.dot  GenerateReport_8h.tex  GenerateReport_8h__dep__incl.dot  GenerateReport_8h__incl.dot  GenerateReport_8h_source.tex  IncidentDialog_8cpp.tex  IncidentDialog_8cpp__incl.dot  IncidentDialog_8h.tex  IncidentDialog_8h__dep__incl.dot  IncidentDialog_8h__incl.dot  IncidentDialog_8h_source.tex  PDFReportGenerator_8cpp.tex  PDFReportGenerator_8cpp__incl.dot  PDFReportGenerator_8h.tex  (+78 more)
include/: Break.h  Exam.h  ExamDataLoader.h  PDFReportGenerator.h  Proctor.h  Student.h  User.h  Utils.h
include/ui_header/: CheckInDialog.h  GenerateReport.h  IncidentDialog.h  SeatMapDialog.h  SubmissionDialog.h  mainwindow.h
src/: Break.cpp  Exam.cpp  ExamDataLoader.cpp  PDFReportGenerator.cpp  Proctor.cpp  Student.cpp  User.cpp  main.cpp
src/ui_src/: CheckInDialog.cpp  GenerateReport.cpp  IncidentDialog.cpp  SeatMapDialog.cpp  SubmissionDialog.cpp  mainwindow.cpp
tests/: readme.md  test_Break.cpp  test_Initiator.cpp  test_Proctor.cpp  test_Student.cpp  test_User.cpp  timeFormator.h
ui/: generatereport.ui  mainwindow.ui
